--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.2.0",
     "connect-mongo": "^3.2.0",
     "expres": "0.0.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
