--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
     "expres": "0.0.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
