--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
