--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "blue-smurfs",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.14.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
