--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start / node server.js", 
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev", 
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore ‘client/*’\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
