--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bgeorgiev268/RL-Sims.git"
