--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
     "api": "nodemon server.js",
     "dev": "concurrently \"react-scripts start\" \"nodemon server.js\""
   },
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.12.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
