--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run install && npm run build"
   },
   "engines": {
     "node": "12.13.0",
