--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,10 @@
 {
   "name": "client",
   "version": "1.0.0",
+  "private": true,
+  "proxy": "http://localhost:3001/",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts-eject",
-    "api": "nodemon server.js",
-    "dev": "concurrently \"react-scripts start\" \"nodemon server.js\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
+   "dependencies": {
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
@@ -24,18 +15,21 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  
   "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
       "not ie <= 11",
       "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:3001"
+    
+  }
+  
 }
