moved env file to react ui

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "express-session": "^1.17.1",
+    "heroku-passport": "0.0.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.12",
     "morgan": "^1.10.0",
