--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start": "node server.js",
+   
     "start:prod": "node server.js",
     "build": "cd client && npm run build",
     "start:dev": "concurrently \"nodemon --ignore ‘client/*’\" \"npm run client\"",
