--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "npm": "6.14.2"
     },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "build": "cd client && npm run build",
+    "start:dev": "concurrently \"nodemon --ignore ‘client/*’\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "heroku-postbuild": "npm run install && npm run build"
   },
   "repository": {
     "type": "git",
